--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 and hello to personalized perfection."
             </p>
             <div class=" mt-4">
-                <a href="./page/model_view.html"
+                <a href="/page/model_view.html"
                     class="text-xl font-bold bg-blue-400 text-white px-8 py-2 rounded shadow-lg hover:shadow-2xl hover:shadow-blue-400">Get
                     start</a>
             </div>
